<resources>
    <string name="app_name">Dr.Taiwan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="home">首頁</string>
    <string name="search">關鍵字搜尋</string>
    <string name="filter">篩選條件</string>

    <string name="test_title">腸球S菌的隱憂-潛在抗藥性的增加</string>
    <string name="test_sub_title">
        近年來，腸球菌是否適合用於保健使用的議題吵的紛紛擾擾，各種機能性飲品或保健食品都可以看到腸球菌的蹤影，似乎看起來是相當安全的菌種，但真的如此嗎？在這食安警報亮紅燈的時代，不追根究柢查了水落石出，怎能確保民眾保健安全，本周微笑要帶大家好好了解「腸球菌的隱憂」。
    </string>
    <string name="test_content">
        腸球菌的爭議這幾年吵的沸沸揚揚，主要源於世界衛生組織發表益生菌指引，提及腸球菌不應該當作人類食用的益生菌，主要因是該類菌種容易對Vancomycin產生高度抗藥性或從其它有抗藥性的腸球菌獲得抗藥性，甚至轉移給其它微生物，而造成人體生病。另一方面，特定有Vancomycin抗藥性菌株普遍認為跟醫院院內感染有關。而指引中也提到，某些腸球菌具有益菌特性且不會產生vancomycin抗生素，但生產廠商有責任去證明食品添加的菌種不具有或轉移抗藥基因及感染力。但對於腸球菌及抗藥性的議題，以及到底腸球菌可以食用嗎？微笑整理下列重點，供大家思索!!!

一、腸球菌的應用與隱憂

      腸球菌屬(學名：Enterococcus)，大致上包含括五種腸球菌。在人類腸道裡有兩種常見的偏利共生腸球菌：糞腸球菌(Enterococcus faecalis)約佔90-95%和屎腸球菌(Enterococcus faecium)約佔5-10%，其它三種為人體中較少的E. casseliflavus、E. gallinarum和E. raffinosus(flavescens)。由於腸球菌生長快速且不怕抗生素的特性，被應用於緩解細菌型腹瀉或服用抗生素引起菌相失衡的腹瀉，常用醫藥級菌株以屎腸球菌(E. faecium)及糞腸球菌(E. faecalis)為主。另一方面，由於腸球菌體積小，且容易培養，故通常菌種數可以拉到很高，甚至達千億菌株數，易於製成高單位菌粉，快速改善菌相失衡的腸道症狀。而在臺灣，因為腸球菌易培養且菌數高，常被填充於各種益生菌製品，以提升產品的總菌數，所以在高菌數益生菌製品，往往能發現腸球菌的蹤跡。

      隨著人類抗生素的使用，適者生存，不適者淘汰，細菌抗藥性應勢而生，於是腸球菌的抗藥性風險浮出檯面，尤其是對後線抗生素Vancomycin產生抗藥性的腸球菌，更令醫界頭痛。而在無法排除腸球菌抗藥基因的潛在風險下，世界衛生組織(WHO)在2002年提出報告不建議腸球菌作為益生菌提供給人類使用。

二、抗生素篩選出抗藥性

      E. faecium與E. faecalis的抗藥性通常是後天產生的，也就是說，需要在有抗生素的環境壓力存在之下，它們才會被篩選出具有抗藥性的菌株。而比較少見的E. gallinarum、E. casseliflavus及E. flavescens先天就具有對萬古黴素(Vancomycin)有抵抗力的基因【1】。一般根據腸球菌對萬古黴素及壁黴素的抗藥能力，而區分為vanA、vanB及vanC三種菌株，而其中「vanA菌」是從屎腸球菌、糞腸球菌中分離出來的，一般而言，它們對萬古黴素及壁黴素都具有高度抗藥性。從生化的角度來看，vanA型菌株的抗藥性基因是位於質體上，它可經由接合作用將含有抗藥性的基因傳遞到另一株細菌內，而這種傳遞方式亦可能發生在不同的菌種間，因而導致抗藥性的擴散與蔓延，這也是近幾年抗萬古黴素金黃色葡萄球菌(VRSA)激增的原因之一。

vancomycin抗菌素

      而目前添加於食品中的腸球菌，大多為人體腸道中既存在的E. faecium與E. faecalis，其抗藥性主由藉由後天篩選或藉由其它抗藥菌種獲得。一般民眾若食用含腸球菌的配方，倒是不用恐慌，不會因此而產生抗藥菌種，但若是免疫功能較差或是正在使用Vancomycine或Teicoplanin抗生素者，微笑建議不要使用含腸球菌的益生菌製品。但根據許多研究結果及主要國家的安全評估，腸球菌作為益生菌對人體健康的不良影響實無法完全排除，因此禁止或有條件的使用是有其必要性的。

三、微笑對腸球菌的建議

      基於無法完全排除腸球菌對人體健康潛在的風險，微笑不建議使用含有腸球菌的益生菌產品長期保養，對於一般腸道保健，建議採用傳統嗜乳酸桿菌(Lactobacillus acidophilus)、比菲德氏菌(Bifidobacterium species)、凱氏乳酸菌(Lactobacillus casei)為主。若在使用抗生素(非vancomycin、Teicoplanin)導致腹瀉或細菌性腹瀉下，可在醫療人員指示下，伺機性借用腸球菌特性，快速改善菌相失衡狀況，再改用上述傳統菌種輔助。

      而在腸球菌的挑選上，微笑建議選擇廠商有標示或證明添加的菌種不具有或轉移抗藥基因及感染力為宜。



 微笑藥師網已於大安區設立第一家諮詢藥局囉，親愛的朋友們若有相關醫藥問題，除了可在本站留言外，也可以到微笑面市直接找微笑藥師團隊唷!!!

《微笑藥師藥局》

藥局地址：臺北市大安區新生南路一段149-10號
服務電話：02-27009655

Line @ID:@smilerx
微笑藥師藥局line@ id (@smilerx)
傳真電話：02-27009638
營業時間：AM09：00-PM21：00
交通：大安森林公園捷運站1號出口右轉，步行2分鐘至新生南路再右轉，步行約5分鐘即可到達。
    </string>
    <string name="test_like_count">5566 個喜歡</string>
    <string name="test_response_count">7788 則回應</string>
    <string name="test_doctor_name">孫協志</string>
    <string name="test_clinic_name">喬傑立中醫診所</string>
    <string name="test_doctor_title">院長</string>
    <string name="add_bookmark">加入書籤</string>
    <string name="add_favorite">加入最愛</string>
    <string name="test_avatar_url"><![CDATA[https://avatars1.githubusercontent.com/u/7425198?s=460&v=4]]></string>
</resources>
