<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.v4.widget.CircleImageView
            android:id="@+id/doctorAvatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/doctorAvatar"
            app:layout_constraintTop_toTopOf="@+id/doctorAvatar"
            tools:text="@string/text_doctor_name" />

        <TextView
            android:id="@+id/doctorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/doctorName"
            app:layout_constraintStart_toEndOf="@+id/doctorName"
            tools:text="@string/test_doctor_title" />

        <TextView
            android:id="@+id/clinicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toEndOf="@+id/doctorAvatar"
            app:layout_constraintTop_toBottomOf="@+id/doctorName"
            tools:text="@string/text_clinic_name" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorAvatar"
            tools:text="@string/test_title" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black_text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/test_sub_title" />

        <TextView
            android:id="@+id/favoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black_text_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            tools:text="@string/test_like_count" />

        <TextView
            android:id="@+id/responseCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black_text_secondary"
            app:layout_constraintStart_toEndOf="@+id/favoriteCount"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            tools:text="@string/test_response_count" />

        <ImageView
            android:id="@+id/addFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple_black"
            android:contentDescription="@string/add_favorite"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            app:srcCompat="@drawable/ic_favorite" />

        <ImageView
            android:id="@+id/addBookmark"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple_black"
            android:contentDescription="@string/add_bookmark"
            android:padding="16dp"
            app:layout_constraintEnd_toStartOf="@+id/addFavorite"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            app:srcCompat="@drawable/ic_bookmark" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>